--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
+    "@types/jquery": "^3.5.29",
     "bun-types": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@typegoose/typegoose": "^12.2.0",
+    "anti-di": "^1.0.1",
+    "jquery": "^3.7.1",
+    "mongoose": "^8.2.0",
+    "puppeteer": "^22.3.0",
+    "rxjs": "^7.8.1"
   }
 }
