--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "moduleDetection": "force",
     "allowImportingTsExtensions": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "noEmit": true,
     "composite": true,
     "strict": true,
